chore: Add encryption and has algorithms
Add hash algorithms to enumeration.
Add asymmetric encryption algorithms to enumeration.
Add symmetric encryption algorithms to enumeration.
Add initialization vectors for symmetrically encrypted values.
Add values to support private key key generation.
