# server/pkg/proto/kript/api/universal.pb.go
@@ -25,18 +25,30 @@ type HashAlgorithm int32
 
 const (
 	HashAlgorithm_UNKNOWN_HASH_ALGORITHM HashAlgorithm = 0
-	// Concatenate password + salt and use SHA-512.
-	HashAlgorithm_SHA_512 HashAlgorithm = 1
+	// Hash the utf-8 encoded password and utf-8 encoded salt using bcrypt with a cost of 10.
+	HashAlgorithm_BCRYPT HashAlgorithm = 1
+	// Hash the utf-8 encoded password and utf-8 encoded salt using scrypt with N=16384, r=8, p=1, and derived key length = 256 bits
+	HashAlgorithm_SCRYPT HashAlgorithm = 2
+	// Hash the utf-8 encoded password and utf-8 encoded salt using PBKDF2 with SHA512, 20000 iterations, and a derived key length of 256 bits
+	HashAlgorithm_PBKDF2_SHA_512 HashAlgorithm = 3
+	// Hash the utf-8 encoded password and utf-8 encoded salt using Argon2id, with t=75, m=1024, p=1, T=32 (derived key length of 256 bits).
+	HashAlgorithm_ARGON2 HashAlgorithm = 4
 )
 
 var HashAlgorithm_name = map[int32]string{
 	0: "UNKNOWN_HASH_ALGORITHM",
-	1: "SHA_512",
+	1: "BCRYPT",
+	2: "SCRYPT",
+	3: "PBKDF2_SHA_512",
+	4: "ARGON2",
 }
 
 var HashAlgorithm_value = map[string]int32{
 	"UNKNOWN_HASH_ALGORITHM": 0,
-	"SHA_512":                1,
+	"BCRYPT":                 1,
+	"SCRYPT":                 2,
+	"PBKDF2_SHA_512":         3,
+	"ARGON2":                 4,
 }
 
 func (x HashAlgorithm) String() string {
@@ -52,18 +64,22 @@ type SEncryptionAlgorithm int32
 
 const (
 	SEncryptionAlgorithm_UNKNOWN_S_ENCRYPTION_ALGORITHM SEncryptionAlgorithm = 0
-	// Encrypt using AES with a given key.
-	SEncryptionAlgorithm_AES SEncryptionAlgorithm = 1
+	// Encrypt using AES-256 with a given key and initialization vector, using CBC and PKCS7 padding. If the key is longer than 256 bits, it is truncated to 256. If it is shorter, it is zero-padded.
+	SEncryptionAlgorithm_AES_256_CBC SEncryptionAlgorithm = 1
+	// Encrypt using AES-256 with a given key and initialization vector, using GCM. If the key is longer than 256 bits, it is truncated to 256. If it is shorter, it is zero-padded.
+	SEncryptionAlgorithm_AES_256_GCM SEncryptionAlgorithm = 2
 )
 
 var SEncryptionAlgorithm_name = map[int32]string{
 	0: "UNKNOWN_S_ENCRYPTION_ALGORITHM",
-	1: "AES",
+	1: "AES_256_CBC",
+	2: "AES_256_GCM",
 }
 
 var SEncryptionAlgorithm_value = map[string]int32{
 	"UNKNOWN_S_ENCRYPTION_ALGORITHM": 0,
-	"AES":                            1,
+	"AES_256_CBC":                    1,
+	"AES_256_GCM":                    2,
 }
 
 func (x SEncryptionAlgorithm) String() string {
@@ -79,7 +95,7 @@ type AEncryptionAlgorithm int32
 
 const (
 	AEncryptionAlgorithm_UNKNOWN_A_ENCRYPTION_ALGORITHM AEncryptionAlgorithm = 0
-	// Encrypt using AES with a given key.
+	// Encrypt/Decrypt using RSA, using OAEP padding.
 	AEncryptionAlgorithm_RSA AEncryptionAlgorithm = 1
 )
 
@@ -190,23 +206,26 @@ func init() {
 func init() { proto.RegisterFile("kript/api/universal.proto", fileDescriptor_f55c2955aa4afcfe) }
 
 var fileDescriptor_f55c2955aa4afcfe = []byte{
-	// 277 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x84, 0xd0, 0xcd, 0x4b, 0xc3, 0x30,
-	0x18, 0x06, 0x70, 0x4b, 0xd1, 0xb1, 0xb7, 0x28, 0xa5, 0x0c, 0xf1, 0x03, 0x64, 0xf4, 0x24, 0x3b,
-	0x34, 0xd8, 0x32, 0xd0, 0x63, 0x1c, 0xc5, 0x6e, 0xd3, 0x56, 0x9a, 0x4a, 0xd1, 0x4b, 0xe9, 0x4a,
-	0x69, 0x63, 0x3f, 0x12, 0xd2, 0x6c, 0xe2, 0x7f, 0x2f, 0xeb, 0x70, 0xe2, 0x45, 0x8f, 0xc9, 0xf3,
-	0xbc, 0xbf, 0xc3, 0x03, 0xe7, 0x95, 0xa0, 0x5c, 0xa2, 0x94, 0x53, 0xb4, 0x6e, 0xe9, 0x26, 0x17,
-	0x5d, 0x5a, 0x5b, 0x5c, 0x30, 0xc9, 0x8c, 0x61, 0x1f, 0x59, 0x29, 0xa7, 0x26, 0x02, 0x0d, 0x67,
-	0x59, 0xde, 0x75, 0x11, 0xab, 0xf2, 0xd6, 0x18, 0x83, 0xfa, 0xfe, 0x21, 0xcf, 0x94, 0xb1, 0x72,
-	0xad, 0xd9, 0x27, 0xd6, 0xbe, 0x67, 0x2d, 0xe2, 0x28, 0xdc, 0x46, 0xe6, 0x25, 0xa8, 0x8b, 0x38,
-	0x32, 0x46, 0x70, 0x28, 0xb7, 0x17, 0x7d, 0x75, 0x18, 0xee, 0x1e, 0x93, 0x5b, 0x38, 0xf6, 0xd2,
-	0xae, 0xc4, 0x75, 0xc1, 0x04, 0x95, 0x65, 0x63, 0x5c, 0xc0, 0xe9, 0x8b, 0xbf, 0xf4, 0x83, 0xd8,
-	0x4f, 0x3c, 0x4c, 0xbc, 0x04, 0x3f, 0x3e, 0x04, 0xe1, 0x3c, 0xf2, 0x9e, 0xf4, 0x03, 0x43, 0x83,
-	0x01, 0xf1, 0x70, 0x32, 0xbd, 0xb1, 0x75, 0x65, 0x32, 0x83, 0x11, 0x71, 0xdb, 0x4c, 0x7c, 0x72,
-	0x49, 0x59, 0xfb, 0x03, 0x98, 0x70, 0xf5, 0x0d, 0x90, 0xc4, 0xf5, 0x67, 0xe1, 0xeb, 0x73, 0x34,
-	0x0f, 0xfc, 0x5f, 0xd0, 0x00, 0x54, 0xec, 0x92, 0x1d, 0x82, 0xff, 0x41, 0xf0, 0x1f, 0x48, 0x48,
-	0xb0, 0xae, 0xdc, 0x4f, 0xdf, 0x9c, 0x82, 0xca, 0x72, 0xbd, 0xb2, 0x32, 0xd6, 0xa0, 0x9a, 0xa6,
-	0xcd, 0x9d, 0xed, 0xa0, 0x65, 0x3f, 0x66, 0x97, 0x8b, 0x4d, 0x2e, 0x10, 0xaf, 0x0a, 0xd4, 0x2f,
-	0x89, 0xf6, 0x1b, 0xaf, 0x8e, 0xfa, 0x0f, 0xe7, 0x2b, 0x00, 0x00, 0xff, 0xff, 0xc2, 0x0b, 0xbc,
-	0x81, 0x77, 0x01, 0x00, 0x00,
+	// 326 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x84, 0x51, 0xcf, 0x6b, 0xea, 0x40,
+	0x18, 0x7c, 0x31, 0xef, 0xf9, 0xf0, 0x93, 0xe7, 0x5b, 0x16, 0x29, 0xfd, 0x01, 0x45, 0x3c, 0x15,
+	0x0f, 0x59, 0x1a, 0xb1, 0xd0, 0xe3, 0x26, 0xb5, 0x46, 0xad, 0x89, 0x64, 0x53, 0xa4, 0xa5, 0xb0,
+	0xc4, 0x10, 0x74, 0xab, 0x26, 0x61, 0xb3, 0x5a, 0xfa, 0xdf, 0x97, 0x44, 0x6a, 0xdb, 0x43, 0xe9,
+	0x6d, 0xbe, 0x99, 0xf9, 0x66, 0x0e, 0x03, 0x27, 0x2b, 0x29, 0x32, 0x45, 0xc2, 0x4c, 0x90, 0x6d,
+	0x22, 0x76, 0xb1, 0xcc, 0xc3, 0xb5, 0x91, 0xc9, 0x54, 0xa5, 0xb8, 0x56, 0x4a, 0x46, 0x98, 0x89,
+	0x36, 0x81, 0x3a, 0x8d, 0xa2, 0x38, 0xcf, 0x83, 0x74, 0x15, 0x27, 0xb8, 0x05, 0xfa, 0xf3, 0x8b,
+	0x3a, 0xd6, 0x5a, 0xda, 0x45, 0xdd, 0x6c, 0x18, 0x07, 0x9f, 0x31, 0x9a, 0x05, 0x7e, 0x21, 0xb5,
+	0xcf, 0x40, 0x1f, 0xcd, 0x02, 0xdc, 0x84, 0x3f, 0xaa, 0xf8, 0x28, 0xad, 0x35, 0x7f, 0x7f, 0x74,
+	0x22, 0xf8, 0xe7, 0x84, 0xf9, 0x92, 0xae, 0x17, 0xa9, 0x14, 0x6a, 0xb9, 0xc1, 0xa7, 0x70, 0x74,
+	0xef, 0x8e, 0x5d, 0x6f, 0xe6, 0x72, 0x87, 0x32, 0x87, 0xd3, 0xbb, 0x81, 0xe7, 0x0f, 0x03, 0x67,
+	0x82, 0x7e, 0x61, 0x80, 0xaa, 0x65, 0xfb, 0x0f, 0xd3, 0x00, 0x69, 0x05, 0x66, 0x7b, 0x5c, 0xc1,
+	0x18, 0x1a, 0x53, 0x6b, 0x7c, 0x73, 0x6b, 0x72, 0xe6, 0x50, 0xde, 0xbb, 0x34, 0x91, 0x5e, 0xe8,
+	0xd4, 0x1f, 0x78, 0xae, 0x89, 0x7e, 0x77, 0x9e, 0xa0, 0xc9, 0xfa, 0x49, 0x24, 0x5f, 0x33, 0x25,
+	0xd2, 0xe4, 0xa3, 0xab, 0x0d, 0xe7, 0xef, 0x5d, 0x8c, 0xf7, 0xdd, 0x32, 0x6e, 0xe8, 0xb9, 0x5f,
+	0x3a, 0xff, 0x43, 0x9d, 0xf6, 0x19, 0x37, 0x7b, 0x57, 0xdc, 0xb6, 0x6c, 0xa4, 0x7d, 0x26, 0x06,
+	0xf6, 0x04, 0x55, 0x3a, 0x36, 0x34, 0xe9, 0x0f, 0xe9, 0xf4, 0xbb, 0xf4, 0xbf, 0xa0, 0xfb, 0x8c,
+	0x22, 0xcd, 0xea, 0x3d, 0x76, 0x17, 0x42, 0x2d, 0xb7, 0x73, 0x23, 0x4a, 0x37, 0x64, 0x2d, 0xc2,
+	0xcd, 0xb5, 0xd9, 0x25, 0xe3, 0x72, 0x90, 0x3c, 0x96, 0xbb, 0x58, 0x92, 0x6c, 0xb5, 0x20, 0xe5,
+	0x1a, 0xe4, 0xb0, 0xd3, 0xbc, 0x5a, 0x12, 0xdd, 0xb7, 0x00, 0x00, 0x00, 0xff, 0xff, 0xd2, 0x22,
+	0x47, 0x95, 0xbb, 0x01, 0x00, 0x00,
 }
